Add Data Processing

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,12 @@
-<h1 class="title">Conversation Analysis Dialogue Tagger</h1>
+<h1 class="title">Conversation Analysis Dialogue Annotation</h1>
 
 <div class="content">
-    <p class="title-paragraph">Welcome to the Conversation Analysis (CA) Dialogue Tagger.
-        This software tool allows users to quickly annotate dialogues using a CA labelling schema
+    <p class="title-paragraph">Welcome to the Conversation Analysis Modelling Schema (CAMS) Dialogue Annotation Tool.
+        This software allows users to quickly annotate dialogues using CAMS
         that combines Dialogue Acts (DA) and Adjacency Pairs (AP) into AP-type labels for each utterance.
         A full description of the schema, labels and annotation instructions can be found on the
-        <a title="Link to CA Schema" href="schema" onclick="loadContent('schema');return false;">Schema</a> tab above.
-        You can also find it <a title="External link to CA Schema" href="https://nathanduran.github.io/CA-Schema/" target="_blank">here</a>
+        <a title="Link to Schema" href="schema" onclick="loadContent('schema');return false;">Schema</a> tab above.
+        You can also find it <a title="External link Schema" href="https://nathanduran.github.io/CAMS-Schema/" target="_blank">here</a>
         if you would like to open it in another tab/window.
         Please read the following instructions carefully before you begin.</p>
 
@@ -14,7 +14,7 @@
     <p>You will be given a set of <b>five unlabelled dialogues</b> that are a mixture of task-oriented and non-task-oriented
         conversations.
         The first one you see will be short practice dialogue and the rest are selected from four different corpora,
-        <a title="Link to CA-KVRET" href="https://github.com/NathanDuran/CA-KVRET">CA-KVRET</a>,
+        <a title="Link to CAMS-KVRET" href="https://github.com/NathanDuran/CAMS-KVRET">CAMS-KVRET</a>,
         <a title="Link to bAbi" href="https://github.com/NathanDuran/bAbI-Tasks-Corpus">bAbI Tasks</a>,
         <a title="Link to SCoSE" href="https://github.com/NathanDuran/SCoSE-Corpus">SCoSE</a> and
         <a title="Link to CABNC" href="https://github.com/NathanDuran/CABNC-Corpus">CABNC</a>.
@@ -23,7 +23,7 @@
         <br><br>
         For each dialogue, you will be asked to label each utterance with one AP and one DA label which
         combine into an AP-type label.
-        There is a lot of information in the <a title="Link to CA Schema" href="schema" onclick="loadContent('schema');return false;">Schema</a>
+        There is a lot of information in the <a title="Link to Schema" href="schema" onclick="loadContent('schema');return false;">Schema</a>
         and you are not expected to remember all of the label types.
         However, please make sure you follow the short Annotation Guidelines when selecting labels.
         The label buttons on the annotation page have tooltips with short label descriptions,
@@ -94,10 +94,10 @@
         <a title="Link to Annotate" href="annotate" onclick="loadContent('annotate');return false;">annotation</a> page.
         <br><br>
         Remember, you can return to the Home or
-        <a title="Link to CA Schema" href="schema" onclick="loadContent('schema');return false;">Schema</a>
+        <a title="Link to Schema" href="schema" onclick="loadContent('schema');return false;">Schema</a>
         page at any time and your progress will be saved.
         Please follow the Annotation Guidelines when selecting labels and refer to the
-        <a title="Link to CA Schema" href="schema" onclick="loadContent('schema');return false;">Schema</a>
+        <a title="Link to Schema" href="schema" onclick="loadContent('schema');return false;">Schema</a>
         if you are unsure.
         <br><br>
         Please log out when you are finished and thank you for taking part!
