--- a/templates/schema.html
+++ b/templates/schema.html
@@ -1,4 +1,4 @@
-<h1 class="title" id="conversation-analysis-schema">Conversation Analysis Schema</h1>
+<h1 class="title" id="conversation-analysis-modelling-schema">Conversation Analysis Modelling Schema</h1>
 
 <div class="content">
 
@@ -136,12 +136,12 @@
     <!-- Overview -->
     <h1 id="overview">Overview</h1>
 
-    <p>The Conversation Analysis (CA) schema defines a domain agnostic annotation scheme for dialogue that is aligned with
-        relevant theories from within the CA literature and the Dialogue Act Mark-up Language (DiAML) as defined in ISO
-        24617 (British Standards Institution, 2012). The schema defines both Adjacency Pairs (AP) and Dialogue Acts (DA)
-        which combine to form AP-types. The AP-type labels are designed to capture the semantic and syntactic structure of
-        an interaction, in a format that is independent of the domain or topic, and which facilitate the computational
-        modelling of dialogue.</p>
+    <p>The Conversation Analysis Modelling Schema (CAMS) defines a domain agnostic annotation scheme for dialogue that
+        is aligned with relevant theories from within the CA literature and the Dialogue Act Mark-up Language (DiAML)
+        as defined in ISO 24617 (British Standards Institution, 2012). The schema defines both Adjacency Pairs (AP)
+        and Dialogue Acts (DA) which combine to form AP-types. The AP-type labels are designed to capture the semantic
+        and syntactic structure of an interaction, in a format that is independent of the domain or topic, and which
+        facilitate the computational modelling of dialogue.</p>
 
     <p>There are 11 AP in the schema and the set includes; FPP and SPP for base, pre, post and insert-expansions as
         described by Liddicoat, (2007) and Sidnell, (2010). Because dialogue does not always contain even numbers of
@@ -202,7 +202,7 @@
 
     <p>AP can also be ‘type related’ and this pair-type relation has the useful property of limiting the range of possible
         responses to a given FPP. For example, a question could be followed by an answer, or followed by a question
-        (FPP-insert), to elicit information required to better answer the initial question. Within the CA Schema the
+        (FPP-insert), to elicit information required to better answer the initial question. Within CAMS the
         AP-types are defined by the addition of a DA label. Both the AP and DA labels are combined to create an AP-type
         label for each utterance of a dialogue.</p>
 
